Fixes image captions on mobile devices

--- a/static/less/common/article.less
+++ b/static/less/common/article.less
@@ -83,6 +83,12 @@ article {
     span {
       .font;
     }
+
+	/* Fixes image captions on mobile devices. */
+  	@media (max-width:767px){	
+      position: relative;
+      display: block;
+	}	
   }
 }
 
